[gd_scene load_steps=11 format=3 uid="uid://mjk7muphmuu1"]

[ext_resource type="Texture2D" uid="uid://4fn67osg5o33" path="res://assets/ui/quit_btn.png" id="1_03fru"]
[ext_resource type="Script" uid="uid://dwy1drj3c1xfm" path="res://scenes/user_interface/pause_menu/pause_menu.gd" id="1_6uf0v"]
[ext_resource type="Texture2D" uid="uid://djwa5ywkkpd0j" path="res://assets/ui/quit_hover.png" id="2_syd26"]
[ext_resource type="Texture2D" uid="uid://utl7sw4e244t" path="res://assets/ui/play_btn.png" id="3_7c761"]
[ext_resource type="Texture2D" uid="uid://buft1o485me0e" path="res://assets/ui/play_hover.png" id="4_0n4ns"]
[ext_resource type="Texture2D" uid="uid://xihc8rx8p6xl" path="res://assets/ui/replay_btn.png" id="5_d6ak4"]
[ext_resource type="Texture2D" uid="uid://ddx5x52tuuqxt" path="res://assets/ui/replay_hover.png" id="6_6uf0v"]

[sub_resource type="Animation" id="Animation_1fm4v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4jd4m"]
resource_name = "default"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_es1f5"]
_data = {
&"RESET": SubResource("Animation_1fm4v"),
&"default": SubResource("Animation_4jd4m")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_6uf0v")

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_es1f5")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.572549, 0.784314, 0.568627)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.121569, 0.4, 0.694118, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.121569, 0.4, 0.694118, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.121569, 0.4, 0.694118, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Sound Effects"

[node name="SfxSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="WindowModeContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/WindowModeContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.121569, 0.4, 0.694118, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Window Mode"

[node name="WinModeToggleButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/WindowModeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Window"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuitButton" type="TextureButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("1_03fru")
texture_hover = ExtResource("2_syd26")

[node name="ResumeButton" type="TextureButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_7c761")
texture_hover = ExtResource("4_0n4ns")

[node name="ReplayButton" type="TextureButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("5_d6ak4")
texture_hover = ExtResource("6_6uf0v")
